--- a/src/app/components/add-propietario/add-propietario.component.html
+++ b/src/app/components/add-propietario/add-propietario.component.html
@@ -1,1 +1,87 @@
-<p>add-propietario works!</p>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--es como el JSTL - customTag-->
+
+<head th:replace="principal::head">
+	<title>Getting Started: Serving Web Content</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+</head>
+
+<body>
+	<div id="contenedor">
+		<header th:replace="principal::header">
+		</header>
+
+		<main>
+			<nav th:replace="principal::nav">
+			</nav>
+			<section style="width: 65%; float: left;">
+				<div style="margin-left: 20%; width: 60%;">
+					<h2>Mantenimiento de Propietario</h2>
+					<form action="/grabar" method="post" th:object="${producto}">
+
+						<div class="form-group">
+							<label for="exampleFormControlInput1">Codigo de Propietario</label>
+							<input type="number" th:field="*{codpropietario}" class="form-control"
+								id="exampleFormControlInput1" placeholder="Ingrese Codigo" required>
+						</div>
+						<div class="form-group">
+							<label for="exampleFormControlInput1">DNI</label>
+							<input type="text" th:field="*{dni}" class="form-control" id="exampleFormControlInput1"
+								placeholder="Ingrese DNI" required>
+						</div>
+						<div class="form-group">
+							<label for="exampleFormControlSelect1">Nombre</label>
+							<input type="text" th:field="*{nombre}" class="form-control" id="exampleFormControlInput1"
+								placeholder="Ingrese Nombre" required>
+						</div>
+						<div class="form-group">
+							<label for="exampleFormControlSelect1">Apellido Paterno</label>
+							<input type="text" th:field="*{primerapellido}" class="form-control"
+								id="exampleFormControlInput1" placeholder="Ingrese Apellido Paterno" required>
+						</div>
+						<div class="form-group">
+							<label for="exampleFormControlSelect1">Apellido Materno</label>
+							<input type="text" th:field="*{segundoapellido}" class="form-control"
+								id="exampleFormControlInput1" placeholder="Ingrese Apellido Materno" required>
+						</div>
+						<div class="form-row">
+							<div class="form-group col-md-6">
+								<label for="exampleFormControlSelect1">Telefono</label>
+								<input type="text" th:field="*{telefono}" class="form-control"
+									id="exampleFormControlInput1" placeholder="Ingrese Telefono" required>
+							</div>
+							<div class="form-group col-md-6">
+								<label for="exampleFormControlSelect1">Celular</label>
+								<input type="text" th:field="*{celular}" class="form-control"
+									id="exampleFormControlInput1" placeholder="Ingrese Celular" required>
+							</div>
+						</div>
+
+
+
+
+
+
+
+						<button type="submit" class="btn btn-primary">Registrar</button>
+						<a href="/listar" class="btn btn-primary">Listar Propietarios</a>
+						<a href="/listar" class="btn btn-warning">Actualizar</a>
+						<a href="/listar" class="btn btn-danger">Eliminar</a>
+
+
+					</form>
+				</div>
+			</section>
+		</main>
+
+		<footer th:replace="principal::footer">
+		</footer>
+
+	</div>
+
+
+</body>
