--- a/src/app/components/add-departamento/add-departamento.component.html
+++ b/src/app/components/add-departamento/add-departamento.component.html
@@ -1,1 +1,53 @@
-<p>add-departamento works!</p>
+<div style="margin-top: 4%">
+  <form class="content">
+    <div class="submit-form">
+
+      <div class="row">
+        <div class="col-lg-12">
+          <h6>Registro de Departamento</h6>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 3%">
+
+        <div class="col-lg-4">
+          <label for="numdepa">Numero de Departamento</label>
+          <input type="number" class="form-control" name="numdepa" id="numdepa" />
+        </div>
+
+        <div class="col-lg-4">
+          <label for="fechentreg">Fecha de Entrega</label>
+          <input type="date" class="form-control" name="fechentreg" id="fechentreg" />
+        </div>
+        <div class="col-lg-4">
+          <label for="precio">Precio</label>
+          <input type="number" class="form-control" name="precio" id="precio" />
+        </div>
+      </div>
+      <div class="row" style="margin-top: 3%">
+
+        <div class="col-lg-6">
+          <label for="edificio">Edificio</label>
+          <select id="edificio" name="edificio" class="form-control">
+            <option value="-1"> [Seleccione] </option>
+            <option>E001</option>
+            <option>E002</option>
+            <option>E003</option>
+            <option>E004</option>
+          </select>
+        </div>
+        <div class="col-lg-6">
+          <label for="propietario">Propietario</label>
+          <select id="propietario" name="propietario" class="form-control">
+            <option value="-1"> [Seleccione] </option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top: 3%">
+      <div class="col-lg-12">
+        <button class="btn btn-success">Enviar</button>
+      </div>
+    </div>
+  </form>
+</div>
