--- a/src/app/components/add-visitante/add-visitante.component.html
+++ b/src/app/components/add-visitante/add-visitante.component.html
@@ -39,19 +39,23 @@
 			</div>
 		  </div>
 
-
-
-
-
       <div class="form-group">
         <div class="form-group col-md-6">
-          <label for="inputState">Tipo De Visitante</label>
-          <select id="inputState" class="form-control">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
+          <label for="inputAddress">codigo De Usuario</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="">
         </div>
-      </div>
+        </div>
+        <div class="form-group">
+          <div class="form-group col-md-6">
+            <label for="inputAddress">codigo De Propietario</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="">
+          </div>
+          </div>
+
+
+
+
+
 
 
       
