--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
             Clientes
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="registraCliente" class="dropdown-item">Crear cliente</a>
+              <a routerLink="add-usuario" class="dropdown-item">Crear Usuario</a>
             </div>
         </li>       
       </ul>
