--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,9 @@
           <a routerLink="addVisitante" class="nav-link">Visitante</a>
         </li>
         <li class="">
+          <a routerLink="addMascota" class="nav-link">Mascota</a>
+        </li>
+        <li class="">
           <a routerLink="addDepartamento" class="nav-link">Departamento</a>
         </li>
       </ul>
