--- a/src/app/components/add-mascota/add-mascota.component.html
+++ b/src/app/components/add-mascota/add-mascota.component.html
@@ -1,1 +1,55 @@
-<p>add-mascota works!</p>
+<div>
+
+    <form class="content">
+      <div class="submit-form">
+  
+        <div class="row">
+          <div class="col-lg-12">
+            <h6>Registro de Mascota</h6>
+          </div>
+        </div>
+  
+        <div class="row" style="margin-top: 3%">
+  
+          <div class="col-lg-3">
+            <label for="nombre_mascota">Nombre</label>
+            <input type="text" class="form-control" name="nombre_mascota" id="nombre_mascota" />
+          </div>
+          <div class="col-lg-3">
+            <label for="edad_mascota">Edad</label>
+            <input type="text" class="form-control" name="edad_mascota" id="edad_mascota" />
+          </div>
+          <div class="col-lg-3">
+            <label for="raza_mascota">Raza</label>
+            <input type="text" class="form-control" name="raza_mascota" id="raza_mascota" />
+          </div>
+        </div>
+  
+        <div class="row" style="margin-top: 3%">
+  
+          <div class="col-lg-4">
+            <label for="tipo_mascota">Tipo</label>
+            <input type="text" class="form-control" name="tipo_mascota" id="tipo_mascota" />
+          </div>
+
+          <div class="col-lg-4">
+            <label for="cod_propietario">Código del Propietario</label>
+            <input type="text" class="form-control" name="cod_propietario" id="cod_propietario" />
+          </div>
+  
+         
+        </div>
+      </div>
+  
+      <div class="row" style="margin-top: 3%">
+        <div class="col-lg-12">
+          <button class="btn btn-success">Enviar</button>
+        </div>
+      </div>
+  
+  
+  </form>
+  
+  
+  </div>
+  
