--- a/src/app/components/add-propietario/add-propietario.component.html
+++ b/src/app/components/add-propietario/add-propietario.component.html
@@ -1,87 +1,102 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<!--es como el JSTL - customTag-->
+<div id="contenedor">
+	<form class="content" (submit)="savePropietario()">
 
-<head th:replace="principal::head">
-	<title>Getting Started: Serving Web Content</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-</head>
-
-<body>
-	<div id="contenedor">
-		<header th:replace="principal::header">
-		</header>
-
-		<main>
-			<nav th:replace="principal::nav">
-			</nav>
-			<section style="width: 65%; float: left;">
-				<div style="margin-left: 20%; width: 60%;">
-					<h2>Mantenimiento de Propietario</h2>
-					<form action="/grabar" method="post" th:object="${producto}">
-
-						<div class="form-group">
-							<label for="exampleFormControlInput1">Codigo de Propietario</label>
-							<input type="number" th:field="*{codpropietario}" class="form-control"
-								id="exampleFormControlInput1" placeholder="Ingrese Codigo" required>
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlInput1">DNI</label>
-							<input type="text" th:field="*{dni}" class="form-control" id="exampleFormControlInput1"
-								placeholder="Ingrese DNI" required>
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlSelect1">Nombre</label>
-							<input type="text" th:field="*{nombre}" class="form-control" id="exampleFormControlInput1"
-								placeholder="Ingrese Nombre" required>
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlSelect1">Apellido Paterno</label>
-							<input type="text" th:field="*{primerapellido}" class="form-control"
-								id="exampleFormControlInput1" placeholder="Ingrese Apellido Paterno" required>
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlSelect1">Apellido Materno</label>
-							<input type="text" th:field="*{segundoapellido}" class="form-control"
-								id="exampleFormControlInput1" placeholder="Ingrese Apellido Materno" required>
-						</div>
-						<div class="form-row">
-							<div class="form-group col-md-6">
-								<label for="exampleFormControlSelect1">Telefono</label>
-								<input type="text" th:field="*{telefono}" class="form-control"
-									id="exampleFormControlInput1" placeholder="Ingrese Telefono" required>
-							</div>
-							<div class="form-group col-md-6">
-								<label for="exampleFormControlSelect1">Celular</label>
-								<input type="text" th:field="*{celular}" class="form-control"
-									id="exampleFormControlInput1" placeholder="Ingrese Celular" required>
-							</div>
-						</div>
-
-
-
-
-
-
-
-						<button type="submit" class="btn btn-primary">Registrar</button>
-						<a href="/listar" class="btn btn-primary">Listar Propietarios</a>
-						<a href="/listar" class="btn btn-warning">Actualizar</a>
-						<a href="/listar" class="btn btn-danger">Eliminar</a>
-
-
-					</form>
+		<div class="submit-form" style="margin-left: 20%;">
+			<div class="row">
+				<div class="col-lg-12">
+					<h2>Registro de Propietario</h2>
 				</div>
-			</section>
-		</main>
+			</div>
 
-		<footer th:replace="principal::footer">
-		</footer>
+			<div class="row" style="margin-top: 3%">
+				<!--<div class="col-lg-3">
+					<label for="exampleFormControlInput1">Codigo de Propietario</label>
+					<input type="number" class="form-control" id="codpropietario" placeholder="Ingrese Codigo"
+						name="codpropietario" [(ngModel)]="propietario.codpropietario" />
+				</div>-->
+				<div class="col-lg-3">
+					<label for="exampleFormControlInput1">DNI</label>
+					<input type="number" class="form-control" id="dni" placeholder="Ingrese DNI" name="dni"
+						[(ngModel)]="propietario.dni" required />
+				</div>
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Nombre</label>
+					<input type="text" class="form-control" id="nombre" placeholder="Ingrese Nombre" name="nombre"
+						[(ngModel)]="propietario.nombre" required />
+				</div>
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Apellido Paterno</label>
+					<input type="text" class="form-control" id="primerapellido" placeholder="Ingrese Apellido Paterno"
+						name="primerapellido" [(ngModel)]="propietario.primerapellido" required />
+				</div>
+			</div>
 
-	</div>
+			<div class="row" style="margin-top: 3%">
 
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Apellido Materno</label>
+					<input type="text" class="form-control" id="segundoapellido" placeholder="Ingrese Apellido Materno"
+						name="segundoapellido" [(ngModel)]="propietario.segundoapellido" required />
+				</div>
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Telefono</label>
+					<input type="text" class="form-control" id="telefono" placeholder="Ingrese Telefono" name="telefono"
+						[(ngModel)]="propietario.telefono" required />
+				</div>
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Celular</label>
+					<input type="text" class="form-control" id="celular" placeholder="Ingrese Celular" name="celular"
+						[(ngModel)]="propietario.celular" required />
+				</div>
 
-</body>
+			</div>
+
+			<div class="row" style="margin-top: 3%">
+				
+				<div class=" col-lg-3">
+					<label for="exampleFormControlSelect1">Fecha de Registro</label>
+					<input type="date" class="form-control" id="fecharegistro" placeholder="Ingrese Celular" name="fecharegistro"
+						[(ngModel)]="propietario.fecharegistro" required />
+				</div>
+
+				<div class=" col-lg-3">
+					<label for="exampleFormControlSelect1">Hora de Registro</label>
+					<input type="time" class="form-control" id="horaregistro" placeholder="Ingrese Celular" name="horaregistro"
+						[(ngModel)]="propietario.horaregistro" required />
+				</div>
+				<!--
+				<div class="col-lg-3">
+					<label for="exampleFormControlSelect1">Estado</label>
+					<input type="number" class="form-control" id="celular" placeholder="Ingrese Estado" name="estado"
+						[(ngModel)]="propietario.estado" required />
+				</div>-->
+
+			</div>
+			<div class="row" style="margin-top: 3%">
+
+				<div class="col-lg-3">
+					<label for="tipo">Usuario</label>
+					<select id="idTipoReclamo" name="idTipoReclamo" class="form-control" [(ngModel)]="propietario.usuario!.idUsuario">
+						<option value="-1"> [Seleccione] </option>
+						<option *ngFor="let us of lstUsuario" value="{{us.idUsuario}}" name="idUsuario" >{{us.nombre}}</option>
+
+					</select>
+				</div>
+				<div class="col-lg-3">
+					<label for="tipo">Departamento</label><!---->
+					<select id="idTipoReclamo" name="idTipoReclamo" class="form-control"  [(ngModel)]="propietario.departamento!.cod_departamento">
+						<option value="-1"> [Seleccione] </option>
+						<option *ngFor="let aux of lstDepartamento" value="{{aux.cod_departamento}}" name="cod_departamento" >{{aux.num_departamento}}</option>
+						
+					</select>
+				</div>
+			</div>
+
+			<div class="row" style="margin-top: 3%">
+				<div class="col-lg-12">
+					<button type="submit" class="btn btn-primary">Registrar</button>
+				</div>
+			</div>
+		</div>
+	</form>
+</div>
