--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,106 +1,112 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="#">Edificio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+  <a class="navbar-brand" href="#">Edificio</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
 
-      <ul class="navbar-nav">
-        
-
-        <li class="nav-item " *ngIf="!isLogged">
-            <a class="nav-link"  routerLink="/login"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a>
-        </li>
-        <li class="nav-item" *ngIf="isLogged" (click)="onLogOut()" >
-            <a class="nav-link" style="cursor: pointer;"><i class="fas fa-door-open" ></i> Cerrar Sesión</a>
-        </li>
+    <ul class="navbar-nav">
 
 
-        <li class="nav-item dropdown" *ngIf="isLogged">
+      <li class="nav-item " *ngIf="!isLogged">
+        <a class="nav-link" routerLink="/login"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a>
+      </li>
+      <li class="nav-item" *ngIf="isLogged" (click)="onLogOut()">
+        <a class="nav-link" style="cursor: pointer;"><i class="fas fa-door-open"></i> Cerrar Sesión</a>
+      </li>
 
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-           data-toggle="dropdown" aria-expanded="false">
 
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+      <li class="nav-item dropdown" *ngIf="isLogged">
 
-            Usuario
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-usuario" class="dropdown-item">Crear Usuario</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false"></a>
 
-            </div>
-        </li> 
-        
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Departamento
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
-            </div>
-        </li> 
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
 
-          </div>
-        </li>
+          Usuario
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-usuario" class="dropdown-item">Crear Usuario</a>
 
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Mascota
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Mascota</a>
-          </div>
-        </li>
-        
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Propietario
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-propietario" class="dropdown-item">Crear Propietario</a>
+        </div>
+      </li>
 
-            </div>
-        </li> 
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Departamento
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
+        </div>
+      </li>
 
-          </div>
-        </li>  
 
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Incidente
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-incidente" class="dropdown-item">Crear Incidente</a>
-          </div>
-        </li>  
 
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Servicios
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-servicios" class="dropdown-item">Crear Servicios</a>
-          </div>
-        </li>  
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Mascota
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-mascota" class="dropdown-item">Crear Mascota</a>
+        </div>
+      </li>
 
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Visitante
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-visitante" class="dropdown-item">Crear Visitante</a>
-          </div>
-        </li>
-        
-        <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Departamento
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
-          </div>
-        </li> 
-      </ul>
-    </div>
-  </nav>
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Propietario
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-propietario" class="dropdown-item">Crear Propietario</a>
+
+        </div>
+      </li>
+
+
+
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Incidente
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-incidente" class="dropdown-item">Crear Incidente</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Servicios
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-servicios" class="dropdown-item">Crear Servicios</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Visitante
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-visitante" class="dropdown-item">Crear Visitante</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown" *ngIf="isLogged">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-expanded="false">
+          Departamento
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
