Componentes en el NavBar

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,12 +19,67 @@
 
         <li class="nav-item dropdown" *ngIf="isLogged">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Clientes
+            Usuario
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a routerLink="add-usuario" class="dropdown-item">Crear Usuario</a>
-            </div>
-        </li>       
+          </div>
+        </li>
+
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Mascota
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Mascota</a>
+          </div>
+        </li>
+        
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Propietario
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Propietario</a>
+          </div>
+        </li>  
+
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Incidente
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Incidente</a>
+          </div>
+        </li>  
+
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Servicios
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Servicios</a>
+          </div>
+        </li>  
+
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Visitante
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Visitante</a>
+          </div>
+        </li>
+        
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Departamento
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-mascota" class="dropdown-item">Crear Departamento</a>
+          </div>
+        </li>  
+        
       </ul>
     </div>
   </nav>
