--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -40,7 +40,7 @@
             Propietario
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Propietario</a>
+              <a routerLink="add-propietario" class="dropdown-item">Crear Propietario</a>
           </div>
         </li>  
 
@@ -49,7 +49,7 @@
             Incidente
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Incidente</a>
+              <a routerLink="add-incidente" class="dropdown-item">Crear Incidente</a>
           </div>
         </li>  
 
@@ -58,7 +58,7 @@
             Servicios
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Servicios</a>
+              <a routerLink="add-servicios" class="dropdown-item">Crear Servicios</a>
           </div>
         </li>  
 
@@ -67,7 +67,7 @@
             Visitante
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Visitante</a>
+              <a routerLink="add-visitante" class="dropdown-item">Crear Visitante</a>
           </div>
         </li>
         
@@ -76,7 +76,7 @@
             Departamento
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a routerLink="add-mascota" class="dropdown-item">Crear Departamento</a>
+              <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
           </div>
         </li>  
         
