--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,13 +18,31 @@
 
 
         <li class="nav-item dropdown" *ngIf="isLogged">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Clientes
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+           data-toggle="dropdown" aria-expanded="false">
+            Usuario
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a routerLink="add-usuario" class="dropdown-item">Crear Usuario</a>
             </div>
-        </li>       
+        </li> 
+        
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Departamento
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-departamento" class="dropdown-item">Crear Departamento</a>
+            </div>
+        </li> 
+        <li class="nav-item dropdown" *ngIf="isLogged">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Propietario
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a routerLink="add-propietario" class="dropdown-item">Crear Propietario</a>
+            </div>
+        </li> 
       </ul>
     </div>
   </nav>
