--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
 
+<app-loading></app-loading>
+<div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Cibertec</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -33,5 +34,6 @@
   <div class="container mt-3">
     <router-outlet></router-outlet>
   </div>
+
 
 </div>
